--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.19",
     "nodemon": "^2.0.4",
     "tailwindcss": "^1.4.6"
   },
