--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "scripts": {
     "express": "nodemon express.js",
-    "css": "npx tailwindcss build ./public/styles/main.tailwind.css -o ./public/styles/main.css"
+    "buildcss": "npx tailwindcss build ./public/styles/main.tailwind.css -o ./public/styles/main.css"
   },
   "name": "france_et_moi",
   "version": "1.0.0",
   "main": "express.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
-    "mongodb": "^3.5.9",
     "mongoose": "^5.9.19",
     "nodemon": "^2.0.4",
     "tailwindcss": "^1.4.6"
