--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.19",
     "nodemon": "^2.0.4",
     "tailwindcss": "^1.4.6"
