--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.19",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.4.10",
-    "nodemon": "^2.0.4",
-    "morgan": "^1.10.0"
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "@tailwindcss/custom-forms": "^0.2.1",
